deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trend-store
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trend-store
  template:
    metadata:
      labels:
        app: trend-store
    spec:
      containers:
        - name: trend-store
          image: joelrobinson791/trend-store-app:latest
          ports:
            - containerPort: 3000
