ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trend-monitoring-ingress
  namespace: test
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: "200-399"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: prom2-grafana
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trend-store-service
                port:
                  number: 3000
